--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,16 @@ jobs:
         repository: 'comira/dist'
         path: dist
     - name: LS
-      run: ls ./
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        echo 
+        ls ./
+        ls ./src/
+        ls ./dist/
+    - name: mkFile
+      run: |
+        cd dist
+        echo "Hello World" > test.md
+        ls ./
+        git add .
+        git commit -am "Update"
+        git push origin master
