--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
         ls ./
         ls ./src/
         ls ./dist/
+    - name: Config
+      run: |
+        git config user.email "test@github.com"
     - name: mkFile
       run: |
         cd dist
