--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: src
-    - uses: actions/checkout@v2
-      with:
-        repository: 'comira/dist'
-        path: dist
+    - name: Clone
+      run: |
+        git clone git@github.com:comira/dist.git dist
+    #- uses: actions/checkout@v2
+    #  with:
+    #    repository: 'comira/dist'
+    #    path: dist
     - name: LS
       run: |
         echo 
