--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,4 +73,4 @@ jobs:
         ls ./
         git add .
         git commit -am "Update"
-        git push origin master
+        git push origin master -f
