--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
-    strategy:
-          matrix:
-            node-version: [10.x, 12.x]
+    #strategy:
+    #      matrix:
+    #        node-version: [10.x, 12.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -50,10 +50,10 @@ jobs:
     #    repository: 'comira/dist'
     #    path: dist
     
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+    #- name: Use Node.js ${{ matrix.node-version }}
+    #  uses: actions/setup-node@v1
+    #  with:
+    #    node-version: ${{ matrix.node-version }}
     
     - name: LS
       run: |
